--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 
 body, html, canvas {
-  overflow: hidden;
+  overscroll-behavior: none;
   background-color: #010111;
   z-index: 1;
   width: 100%;
