--- a/style.css
+++ b/style.css
@@ -45,11 +45,12 @@ ul {
 }
 
 		ul li {
-			display: inline;
-			vertical-align: middle;
+			display: inline-flex;
 		}
 		
 .button {
+  justify-items: center;
+  display: flex;
 			color: #ffffff;
 			margin: 0;
 		border-radius: 50%;
@@ -75,8 +76,7 @@ transition: text-shadow 0.4s ease-in-out, box-shadow 0.4s ease-in-out, border 0.
 
 .fa{
 
-    top: 25%;
-    position: relative;
+align-self: center;
 
 }
 
