--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ ul {
 		}
 		
 .button {
-  justify-items: center;
+  justify-content: center;
   display: flex;
 			color: #ffffff;
 			margin: 0;
@@ -57,7 +57,6 @@ ul {
 		border: 2px solid #eeeeee4d;
 		box-shadow: inset 0 0 10px 0px #ffffff42;
 		cursor: pointer;
-		display: inline-block;
 width: 2em;
 height: 2em;
 font-size: 1em;
