--- a/style.css
+++ b/style.css
@@ -172,10 +172,15 @@ a{
 text-decoration: none;
 }
 
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 680px){
 .card {
   width : 90%;
   text-align: center;
+}
+
+.button{
+  width: 1em;
+  height: 1em;
 }
 
 }
