--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@ button#accelPermsButton {
   left: 0;
   padding: 1em;
   bottom: 10px;
+  z-index: 999;
 }
 
 @media only screen and (max-width: 680px){
