--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ height: 100%;
   top: 5px;
   right: 10px;
   font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
-  color : #fff;
+  color : #666;
 }
 
 .f a {
