--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@ button#accelPermsButton {
   padding: 1em;
   bottom: 10px;
   z-index: 999;
+  display: none;
 }
 
 @media only screen and (max-width: 680px){
